# Molecular-Analytics-Suite---AI-Powered-Drug-Discovery-Platform

./: .gitignore  CONTRIBUTING.md  LICENSE  PRD.md  QA_CHECKLIST.md  README.md
backend/: package-lock.json  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: admet_agent.py  conformer_agent.py  parser_agent.py  render_agent.py  toolkit.py
backend/app/models/: schemas.py
backend/app/routes/: molecules.py
backend/app/services/: admet_ai_client.py  rdkit_utils.py
backend/tests/: test_smoke.py
flask_frontend/: app.py
flask_frontend/static/css/: style.css
flask_frontend/static/js/: analysis.js  file-upload.js  main.js  molecular-viewer.js
flask_frontend/templates/: base.html  index.html
frontend/: index.html  package-lock.json  package.json  test.html  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AdmetResults.tsx  AnimatedCard.tsx  MoleculeInput.tsx  MoleculeViewer3D.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Home.tsx
